# tari-ootle

./: .dockerignore  .gitignore  .license.ignore  .prototools  CHANGELOG.md  CHECKLISTS.md  CLAUDE.md  Cargo.toml  README.md  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  clippy.toml  cucumber-output-junit.xml  deny.toml  lints.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr1816_comments.json  rust-toolchain.toml  rustfmt.toml
applications/tari_dan_cli/: Cargo.toml
applications/tari_dan_cli/src/: main.rs
applications/tari_indexer/: Cargo.toml  README.md  build.rs  config_rate_limits_example.toml  log4rs_sample.yml  openrpc.json
applications/tari_indexer/docs/: README.md  architecture.md  configuration.md  deployment.md  overview.md
applications/tari_indexer/src/: base_layer.rs  block_data.rs  bootstrap.rs  cli.rs  config.rs  event.rs  event_manager.rs  event_scanner.rs  ipc.rs  lib.rs  main.rs  network_client.rs  notify.rs  store.rs  substate_file_cache.rs  substate_manager.rs
applications/tari_indexer/web_ui/: .gitignore  package.json  tsconfig.json  tsconfig.tsbuildinfo
applications/tari_ootle_app_utilities/: Cargo.toml
applications/tari_ootle_app_utilities/config_presets/: a_common.toml  b_peer_seeds.toml  c_validator_node.toml  d_indexer.toml  e_wallet_daemon.toml  f_epoch_oracle.toml
applications/tari_ootle_app_utilities/src/: claim_burn_proof_verifier.rs  common.rs  common_cli_args.rs  configuration.rs  epoch_oracle_config.rs  fee_tables.rs  genesis_resources.rs  identity_management.rs  keypair.rs  lib.rs  p2p_config.rs  seed_peer.rs  shared_consts.rs  tcp.rs  transaction_executor.rs
applications/tari_signaling_server/: Cargo.toml  log4rs_sample.yml
applications/tari_signaling_server/src/: data.rs  jrpc_server.rs  main.rs  permissions.rs
applications/tari_swarm_daemon/: Cargo.toml  build.rs
applications/tari_swarm_daemon/docker/: README.md  tari_swarm.Dockerfile
applications/tari_swarm_daemon/src/: cli.rs  config.rs  logger.rs  main.rs
applications/tari_swarm_daemon/webui/: package-lock.json  package.json  vite.config.ts
applications/tari_validator_admin_cli/: Cargo.toml
applications/tari_validator_admin_cli/src/: main.rs
applications/tari_validator_node/: Cargo.toml  build.rs  log4rs_sample.yml  openrpc.json
applications/tari_validator_node/src/: bootstrap.rs  cli.rs  config.rs  dan_node.rs  dry_run_transaction_processor.rs  epoch_metrics.rs  event_subscription.rs  file_l1_submitter.rs  genesis_state.rs  lib.rs  main.rs  memory_cache_template_provider.rs  metrics.rs  node.rs  state_bootstrap.rs  state_store.rs  state_store_template_provider.rs  substate_resolver.rs  validator.rs  validator_registration_file.rs
applications/tari_validator_node/web_ui/: .gitignore  package.json  tsconfig.json
applications/tari_walletd/: Cargo.toml  build.rs  log4rs_sample.yml  openrpc.json
applications/tari_walletd/docs/: agent-authentication.md
applications/tari_walletd/src/: cli.rs  config.rs  indexer_jrpc_impl.rs  jrpc_server.rs  lib.rs  main.rs  server.rs  webrtc.rs
applications/tari_walletd/tests/: api_keys.rs
applications/tari_walletd/web_ui/: .env.example  .gitignore  .prettierrc.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
clients/base_node_client/: Cargo.toml
clients/base_node_client/src/: error.rs  grpc.rs  lib.rs  traits.rs  types.rs
clients/tari_indexer_client/: Cargo.toml  README.md
clients/tari_indexer_client/src/: conversions.rs  error.rs  event.rs  graphql_client.rs  json_rpc_client.rs  lib.rs  protobuf.rs  protobuf_stream.rs  rest_api_client.rs  sse.rs  types.rs
clients/tari_indexer_client/tests/: streaming.rs
clients/validator_node_client/: Cargo.toml
clients/validator_node_client/src/: error.rs  lib.rs  types.rs
clients/wallet_daemon_client/: Cargo.toml  README.md
clients/wallet_daemon_client/src/: component_address.rs  error.rs  lib.rs  permissions.rs  serialize.rs  types.rs  webauthn_types.rs
crates/common_types/: Cargo.toml  README.md
crates/common_types/src/: array_utils.rs  base_layer_hashing.rs  borsh.rs  bytes.rs  committee.rs  consensus_constants.rs  crypto.rs  displayable.rs  engine_signature.rs  epoch.rs  era.rs  extra_data.rs  fee_pool.rs  hashing.rs  layer_one_transaction.rs  lib.rs  lock_intent.rs  network.rs  node_addressable.rs  node_height.rs  num_preshards.rs  peer_address.rs  protocol_version.rs  response_status.rs  shard.rs  shard_group.rs  shard_state_versions.rs  signable.rs  signature.rs  state_version.rs  substate_address.rs  substate_type.rs  utxo_update.rs  validator_metadata.rs  versioned_substate_id.rs  vote_power.rs
crates/consensus_tests/: Cargo.toml
crates/consensus_tests/fixtures/: block.json  block_with_dummies.json  committee.json
crates/consensus_tests/src/: catch_up_rewind.rs  consensus.rs  dummy_blocks.rs  epoch_change.rs  eviction_proof.rs  lib.rs  (+7 more)
crates/consensus_types/: Cargo.toml  README.md
crates/engine/: Cargo.toml  README.md
crates/engine_types/: Cargo.toml  README.md
crates/epoch_manager/: Cargo.toml
crates/epoch_oracles/: Cargo.toml
crates/ootle_address/: Cargo.toml  README.md
crates/ootle_byte_type/: Cargo.toml  README.md
crates/ootle_network/: Cargo.toml  README.md
crates/ootle_sdk_core/: Cargo.toml  README.md
crates/ootle_sdk_ffi_c/: Cargo.toml  build.rs  cbindgen.toml
crates/ootle_serde/: Cargo.toml  README.md
crates/p2p/: Cargo.toml
crates/rpc_state_sync/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  run_all.sh
fuzz/fuzz_targets/: parse_manifest.rs  substate_id_from_str.rs  transaction_decode.rs  value_decode.rs  wasm_validate_code.rs
integration_tests/: Cargo.toml  README.md
integration_tests/src/: base_node.rs  claim_proof.rs  helpers.rs  http_server.rs  indexer.rs  lib.rs  miner.rs  template.rs  util.rs  validator_node.rs  validator_node_cli.rs  validator_node_client.rs  wallet.rs  wallet_daemon.rs  wallet_daemon_cli.rs  wallet_daemon_client.rs
integration_tests/tests/: cucumber.rs  rate_limit_integration.rs  rate_limit_test.rs
(+4015 files in other folders)
