[package]
name = "integration_tests"
description = "The Tari integration tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Apps
tari_validator_node = { workspace = true, default-features = false }
tari_validator_rollback = { workspace = true }
tari_state_store_rocksdb = { workspace = true }
tari_indexer = { workspace = true, default-features = false }
tari_ootle_walletd = { workspace = true, default-features = false }
tari_ootle_address = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_consensus = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_test_tooling = { workspace = true }

tari_transaction_components = { workspace = true }
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
minotari_node_grpc_client = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_common_sqlite = { workspace = true }
tari_shutdown = { workspace = true }
tari_sidechain = { workspace = true }

tari_crypto = { workspace = true }
tari_ootle_app_utilities = { workspace = true, features = ["epoch_oracle", "p2p"] }
tari_ootle_common_types = { workspace = true }
tari_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_indexer_client = { workspace = true, features = ["client"] }
tari_template_lib_types = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_ootle_walletd_client = { workspace = true }
tari_base_node_client = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_ootle_wallet_sdk = { workspace = true }
ootle_byte_type = { workspace = true }

# Minotari
minotari_console_wallet = { workspace = true }
minotari_node = { workspace = true }
minotari_wallet = { workspace = true }
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
tari_p2p = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
cucumber = { version = "0.21.1", features = [
    "default",
    "libtest",
    "output-junit",
] }
hex = { workspace = true }
httpmock = { version = "0.8.0-alpha.1", features = ["remote"] }
indexmap = { workspace = true }
multiaddr = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true, features = ["std"] }
log4rs = { workspace = true, features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
time = { workspace = true }
serde_yaml = "0.9.33"
tokio = { workspace = true, features = [
    "default",
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
    "signal",
] }
tonic = { workspace = true }
regex = "1.11.0"
notify = "8.2.0"

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false   # allows Cucumber to print output instead of libtest

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
