[package]
name = "tari_indexer"
description = "The Tari indexer implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_utilities = { workspace = true }
tari_base_node_client = { workspace = true }
tari_bor = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_consensus = { workspace = true }
tari_consensus_types = { workspace = true }
tari_crypto = { workspace = true }
tari_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_epoch_manager = { workspace = true }
tari_epoch_oracles = { workspace = true, features = ["base_layer"] }
tari_indexer_client = { workspace = true, default-features = false }
tari_indexer_lib = { workspace = true }
tari_networking = { workspace = true }
tari_ootle_app_utilities = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_ootle_p2p = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_ootle_storage_sqlite = { workspace = true }
tari_rpc_framework = { workspace = true }
tari_shutdown = { workspace = true }
tari_template_lib = { workspace = true }
tari_template_manager = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_rpc = { workspace = true }
tari_ootle_wallet_sdk = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum-jrpc = { workspace = true, features = ["anyhow_error"] }
bincode = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
diesel = { workspace = true, default-features = false, features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "time",
] }
diesel_migrations = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true, optional = true }
libp2p = { workspace = true }
log = { workspace = true, features = ["std"] }
hex = { workspace = true }
log4rs = { workspace = true, features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
mime_guess = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["indexmap"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "default",
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tower-http = { workspace = true, features = ["default", "cors"] }
url = { workspace = true, features = ["serde"] }
cacache = { version = "13.1.0", default-features = false, features = ["mmap", "tokio-runtime"] }

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]

[features]
default = ["web_ui"]
web_ui = ["include_dir"]
